[omnibox] Re-apply styling on result view selection change.

Do this only in the pre-Refresh UI, where on Windows (and possibly
some other circumstances?), the text styling is dependent on the
selection state.

Bug: 869768
Change-Id: If4ec69bb2316b0596116210f6e3aa70d1866b182
Reviewed-on: https://chromium-review.googlesource.com/1176196
Reviewed-by: Elly Fong-Jones <ellyjones@chromium.org>
Commit-Queue: Justin Donnelly <jdonnelly@chromium.org>
Cr-Commit-Position: refs/heads/master@{#583353}
Former-commit-id: f4a63b5b41e30dce3bd1dd3d595f502b1b3f2fe9